--- a/src/app/layout/site-identity/site-identity/site-identity.component.html
+++ b/src/app/layout/site-identity/site-identity/site-identity.component.html
@@ -29,7 +29,7 @@
       </div>
 
       <div class="site-contact-text theme-button" (click)="toggleTheme()">
-        <div class="site-theme contact-icon">
+        <div class="site-theme contact-icon" title="Toggle theme">
           <i class="bi bi-circle-half"></i>
         </div>
       </div>
