--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,4 +1,3 @@
-
 /* ------------ LIGHT THEME COLORS ------------ */
 
 /* -- FONT FAMILY -- */
@@ -45,9 +44,13 @@ $spacing-md: 16px;
 $spacing-lg: 24px;
 $spacing-xl: 32px;
 
-$light-box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+$light-box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+$light-hover-box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 20px;
 
-$dark-box-shadow: rgba(255, 255, 255, 0.12) 0px 2px 4px 0px, rgba(255, 255, 255, 0.32) 0px 2px 16px 0px;
+
+$dark-box-shadow: rgba(255, 255, 255, 0.1) 0px 0px 16px;
+$dark-hover-box-shadow: rgba(255, 255, 255, 0.35) 0px 0px 20px;
+
 
 /* -- MEDIA QUERY BREAKPOINTS -- */
 $breakpoints: (
