--- a/src/app/layout/navbar/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar/navbar.component.html
@@ -11,11 +11,11 @@
     </button>
 
     <ul class="navbar__menu" [class.active]="isMenuOpen">
-      <li><a routerLink="/">Home</a></li>
-      <li><a routerLink="/about">About</a></li>
-      <li><a routerLink="/skills-set">Skills</a></li>
-      <li><a routerLink="/projects">Projects</a></li>
-      <li><a routerLink="/contact">Contact</a></li>
+      <li  routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="/home" routerLinkActive="active" >Home</a></li>
+      <li  routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" ><a routerLink="/about" routerLinkActive="active"  >About</a></li>
+      <li  routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" ><a routerLink="/skills-set" routerLinkActive="active"  >Skills</a></li>
+      <li  routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" ><a routerLink="/projects" routerLinkActive="active"  >Projects</a></li>
+      <li  routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="/contact" routerLinkActive="active"  >Contact</a></li>
     </ul>
   </nav>
 </div>
