--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -5,8 +5,12 @@ $light: #ecf0f1;
 $breakpoint: 768px;
 
 #main-navbar {
+  border: none;
+  background-color: $primary;
+  border-radius: 0;
 
   .navbar {
+    border: none;
     background-color: $primary;
     color: $light;
     padding: 0.6rem;
@@ -14,7 +18,8 @@ $breakpoint: 768px;
     justify-content: space-between;
     align-items: center;
     position: relative;
-      font-size: $font-size-md + 2px;
+    font-size: $font-size-md + 2px;
+    border-radius: 0;
 
     &__brand {
       font-size: 1.5rem;
@@ -53,6 +58,7 @@ $breakpoint: 768px;
       flex-direction: column;
       display: none;
 
+
       li {
         border-top: 1px solid rgba(255, 255, 255, 0.1);
         text-align: center;
@@ -64,7 +70,7 @@ $breakpoint: 768px;
           text-decoration: none;
 
           &:hover {
-            background-color: red;
+            background-color: brown;
           }
         }
       }
@@ -78,16 +84,36 @@ $breakpoint: 768px;
         position: static;
         flex-direction: row;
         width: auto;
+        border-radius: $spacing-xs;
 
         li {
           border: none;
-  
+
           a {
             padding: 0.3rem 1rem;
+
+            &.active {
+              color: $light-neutral-font-color;
+            }
+          }
+
+          &.active {
+            background-color: red;
+            color: $light-neutral-font-color;
           }
         }
       }
+
     }
+
+    @media (min-width: $breakpoint) {
+      border-radius: $spacing-xs;
+      padding: 0;
+    }
+  }
+
+  @media (min-width: $breakpoint) {
+    border-radius: $spacing-xs;
   }
 
 }
