--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -3,7 +3,7 @@
 #about-page-main {
     display: grid;
     grid-template-columns: 1fr;
-    row-gap: 15px;
+    row-gap: 20px;
 
     //hr line styles
     @include page-content-intro-hr;
@@ -15,9 +15,16 @@
         row-gap: 25px;
         column-gap: 15px;
         text-align: left;
-        padding: 0 $spacing-sm;
 
         .about-container {
+
+            border: none;
+            padding: $spacing-sm $spacing-sm ;
+            cursor: pointer;
+
+            box-shadow: $light-box-shadow;
+            padding: $spacing-sm;
+            border-radius: $spacing-xs;
 
             .set-heading {
                 margin-bottom: $spacing-xs + 4px;
@@ -26,14 +33,16 @@
                 border-radius: $spacing-xs;
                 padding: $spacing-xs $spacing-sm;
                 font-weight: bold;
+
             }
 
             .set-container {
                 padding: 4px $spacing-sm;
-                 i {
-                        padding-right: 3px;
-                        color: brown;
-                    }
+
+                i {
+                    padding-right: 3px;
+                    color: brown;
+                }
             }
 
             .btn-container {
@@ -41,6 +50,10 @@
                     display: none;
                     margin: $spacing-md 0;
                 }
+            }
+
+            &:hover {
+                box-shadow: $light-hover-box-shadow;
             }
         }
     }
@@ -52,10 +65,6 @@
             row-gap: 15px;
             padding: 0;
             text-align: center;
-
-            border: 1px solid #e5e5e5;
-            padding: $spacing-sm + 2px;
-            border-radius: $spacing-xs;
 
             .about-container {
                 text-align: center;
@@ -72,7 +81,7 @@
                         text-transform: uppercase;
                         padding: $spacing-xs;
                         background-color: red;
-                        margin: $spacing-md 15% 0 ;
+                        margin: $spacing-md 15% 0;
                         border-radius: $spacing-xs;
                         color: $light-neutral-font-color;
                     }
