--- a/src/styles/pages/_skills-set.scss
+++ b/src/styles/pages/_skills-set.scss
@@ -4,7 +4,7 @@
 
     display: grid;
     grid-template-columns: 1fr;
-    row-gap: 15px;
+    row-gap: 20px;
 
     //hr line styles
     @include page-content-intro-hr;
@@ -15,9 +15,13 @@
         row-gap: 25px;
         column-gap: 15px;
         text-align: left;
-        padding: 0 $spacing-sm;
-
+     
         .set-container {
+            box-shadow: $light-box-shadow;
+            border-radius: $spacing-xs;
+            border: none;
+            padding: $spacing-sm $spacing-sm ;
+            cursor: pointer;
 
             .heading {
                 margin-bottom: $spacing-xs + 4px;
@@ -52,6 +56,10 @@
                     display: none;
                 }
             }
+
+            &:hover {
+                box-shadow: $light-hover-box-shadow;
+            }
         }
     }
 
@@ -68,11 +76,6 @@
 
     @include respond-to("xs") {
         .sets-container {
-
-            border: 1px solid #e5e5e5;
-            padding: $spacing-sm + 2px;
-            border-radius: $spacing-xs;
-
             .set-container {
                 text-align: center;
 
@@ -89,21 +92,21 @@
                 }
 
                 .btn-container {
-                text-align: center;
+                    text-align: center;
 
-                .explore {
-                    display: block;
-                    text-transform: uppercase;
-                    padding: $spacing-xs;
-                    background-color: red;
-                     margin: $spacing-lg 15% 0 ;
-                    border-radius: $spacing-xs;
-                    color: $light-neutral-font-color;
+                    .explore {
+                        display: block;
+                        text-transform: uppercase;
+                        padding: $spacing-xs;
+                        background-color: red;
+                        margin: $spacing-lg 15% 0;
+                        border-radius: $spacing-xs;
+                        color: $light-neutral-font-color;
+                    }
                 }
             }
-            }
 
-            
+
         }
     }
 }
