Improved the main grid padding

--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -6,7 +6,7 @@
   width: 100%;
   max-width: 1100px;
   margin: 0 auto;
-  padding: $spacing-md;
+  padding: $spacing-xs + 2px;
   text-align: center;
   background-color: $light-neutral-bg-color;
   display: grid;
