Increased the global font

--- a/src/styles/layout/_site-themes.scss
+++ b/src/styles/layout/_site-themes.scss
@@ -331,7 +331,7 @@
 
         #contact-page-main {
             .contact-form-container {
-                box-shadow: $dark-hover-box-shadow;
+                box-shadow: $dark-box-shadow;
                 padding: $spacing-sm;
                 border-radius: $spacing-xs;
 
