--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -1,6 +1,8 @@
 @use 'abstracts/variables' as *;
 @use "sass:map";
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 //Reusable media queries the handles various breakpoints
 @mixin respond-to($breakpoint) {
   @if map.has-key($breakpoints, $breakpoint) {
@@ -121,11 +123,63 @@
 
 }
 
-@mixin global-font {
-  font-family: $font-stack;
+
+/*
+  -------------------------  FONTS  FIRST PREF --------------------------
+*/
+
+@mixin global-font-jura {
+  font-family: "Jura", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 16px;
+}
+
+@mixin global-font-Ubuntu-light {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 300;
+  font-style: normal;
   font-size: 14px;
-  line-height: 1.5;
-  font-weight: 100;
-  color: $light-default-font-color;
-  background-color: $light-secondery-bg-color;
+}
+
+@mixin global-font-Ubuntu-regular {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+/*
+  -------------------------  FONTS  SECOND PREF --------------------------
+*/
+
+
+@mixin global-font-open-sans {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
+
+@mixin global-font-Raleway {
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+}
+
+@mixin global-font-pt-sans-regular {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 14px;
+}
+
+@mixin global-font-pt-mono {
+  font-family: "PT Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 14px;
 }
