--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -44,10 +44,9 @@ $spacing-md: 16px;
 $spacing-lg: 24px;
 $spacing-xl: 32px;
 
+/* -- BOX-SHADOWS -- */
 $light-box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
 $light-hover-box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 20px;
-
-
 $dark-box-shadow: rgba(255, 255, 255, 0.1) 0px 0px 16px;
 $dark-hover-box-shadow: rgba(255, 255, 255, 0.35) 0px 0px 20px;
 
