--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -128,23 +128,23 @@
   -------------------------  FONTS  FIRST PREF --------------------------
 */
 
-@mixin global-font-jura {
-  font-family: "Jura", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 300;
-  font-style: normal;
-  font-size: 16px;
-}
+// @mixin global-font-jura {
+//   font-family: "Jura", sans-serif;
+//   font-optical-sizing: auto;
+//   font-weight: 300;
+//   font-style: normal;
+//   font-size: 16px;
+// }
 
 @mixin global-font-Ubuntu-light {
   font-family: "Ubuntu", sans-serif;
-  font-weight: 300;
-  font-style: normal;
-  font-size: 14px;
-}
-
-@mixin global-font-Ubuntu-regular {
-  font-family: "Ubuntu", sans-serif;
   font-weight: 400;
   font-style: normal;
+  font-size: 15px;
 }
+
+// @mixin global-font-Ubuntu-regular {
+//   font-family: "Ubuntu", sans-serif;
+//   font-weight: 400;
+//   font-style: normal;
+// }
