--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -141,6 +141,7 @@
   font-weight: 300;
   font-style: normal;
   font-size: 14px;
+  line-height: 1.5;
 }
 
 // @mixin global-font-Ubuntu-regular {
